<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ContestResultActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_96sdp"
        android:background="@drawable/top_corner"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageViewResult"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/ic_reply"
                android:clickable="true"
                android:padding="@dimen/_15sdp" />

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/imageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="CONTEST"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:id="@+id/name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/xl_pizza_plus"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout1"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/back_round_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RelativeLayout01"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:src="@drawable/winner_contest" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="Congratulation!!!"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/segoe_ui_italic"
                    android:text="SHOAIB_OPU"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/seguisb"
                    android:text="on winning the"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/xl_pizza_plus"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/seguisb"
                    android:text="CONTEST"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_18sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="10dp"
                    android:text="About Contest Prize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:padding="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="10dp"
                    android:text="@string/collect_prizes"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_16sdp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:padding="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>