<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ItemDetailActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_corner"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_weight="1"
            android:gravity="left">

            <ImageView
                android:id="@+id/givol_arrow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_logo_new_g" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_search_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_icon_menu" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bottom_corner_top"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/pizza" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/xl_pizza"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="$55"
                            android:textColor="@color/colorGreen"
                            android:textSize="34dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="30/50"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="Time Remaining"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="02:15:34"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pizza_hut" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:text="Pizza Hut"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:text="@string/loving_it"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/tv_justified_paragraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:padding="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="10dp"
                    android:text="About This Giveway"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:padding="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="10dp"
                    android:text="Better to know"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:padding="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="10dp"
                    android:text="About"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:padding="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="10dp"
                    android:text="Our Location"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/our_location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_222sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shapelogin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sign_upBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@color/colorPrimaryDark"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="@dimen/_5sdp"
                    android:text="PARTICIPATE"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>